--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Valdeir Jesus</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/fonts/neue-machina-regular.otf">
+
+    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/global.css">
 </head>
 <body>
-    <h1>Teste</h1>
+    <div class="main">
+        <header class="header">
+            <img src="./assets/img/photo.png" alt="photo" class="photo">
+            <h1 class="title">Olá, <br>eu sou Valdeir Jesus</h1>
+            <div class="information">
+                <p class="job">Developer</p>
+                <p class="location">São Paulo - SP</p>
+                <p class="phone">(11) 99999-0000</p>
+                <p class="email">valdeir@hotmail.com</p>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
