--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="/assets/css/header.css">
     <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/acordeon.css">
 </head>
 <body>
     <div class="main">
@@ -26,6 +27,20 @@
                 <p class="email">valdeir@hotmail.com</p>
             </div>
         </header>
+
+        <section class="acordeon open">
+           <button class="trigger" type="buttom">
+            Idiomas
+            </button>
+            <div class="content">
+                <ul>
+                    <li>Português</li>
+                    <li>Inglês</li>
+                </ul>
+            </div>
+        </section>
+
     </div>
+    <script src="/assets/js/acordeon.js"></script>
 </body>
 </html>
