--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <link rel="stylesheet" href="/assets/css/header.css">
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/acordeon.css">
+    <link rel="stylesheet" href="/assets/css/languages.css">
+    <link rel="stylesheet" href="/assets/css/portfolio.css">
+
+
 </head>
 <body>
-    <div class="main">
+    <main class="main">
         <header class="header">
             <img src="./assets/img/photo.png" alt="photo" class="photo">
             <h1 class="title">Olá, <br>eu sou Valdeir Jesus</h1>
@@ -29,18 +33,43 @@
         </header>
 
         <section class="acordeon open">
-           <button class="trigger" type="buttom">
+           <button class="trigger" type="button">
             Idiomas
             </button>
             <div class="content">
-                <ul>
+                <ul class="languages">
                     <li>Português</li>
                     <li>Inglês</li>
                 </ul>
             </div>
         </section>
 
-    </div>
+        <section class="acordeon open">
+            <button class="trigger" type="button">
+             portfolio
+             </button>
+             <div class="content">
+                 <ul class="portfolio">
+                     <li>
+                        <span class="title github">Criando um app....</span>
+                        <a href="https://www.google.com.br" target="
+                        ">www.google.com.br</a>
+                    </li>
+                    <li>
+                        <span class="title github">Criando um app....</span>
+                        <a href="https://www.google.com.br" target="
+                        ">www.google.com.br</a>
+                    </li>
+                    <li>
+                        <span class="title github">Criando um app....</span>
+                        <a href="https://www.google.com.br" target="
+                        ">www.google.com.br</a>
+                    </li>
+                 </ul>
+             </div>
+         </section>
+
+    </main>
     <script src="/assets/js/acordeon.js"></script>
 </body>
 </html>
