sessao experiencia profissional

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/assets/css/acordeon.css">
     <link rel="stylesheet" href="/assets/css/languages.css">
     <link rel="stylesheet" href="/assets/css/portfolio.css">
+    <link rel="stylesheet" href="/assets/css/experience.css">
 
 
 </head>
@@ -27,14 +28,18 @@
             <div class="information">
                 <p class="job">Developer</p>
                 <p class="location">São Paulo - SP</p>
-                <p class="phone">(11) 99999-0000</p>
-                <p class="email">valdeir@hotmail.com</p>
+                <p class="phone">
+                    <a href="tel:(11) 99999-0000">(11) 99999-0000</a>
+                </p>
+                <p class="email">
+                <a href="mailto:valdeir@hotmail.com">valdeir@hotmail.com</a>    
+                </p>
             </div>
         </header>
 
-        <section class="acordeon open">
+        <section class="acordeon">
            <button class="trigger" type="button">
-            Idiomas
+            <h2>Idiomas</h2>
             </button>
             <div class="content">
                 <ul class="languages">
@@ -44,26 +49,43 @@
             </div>
         </section>
 
-        <section class="acordeon open">
+        <section class="acordeon">
             <button class="trigger" type="button">
-             portfolio
+             <h2>Portfólio</h2>
              </button>
              <div class="content">
                  <ul class="portfolio">
                      <li>
-                        <span class="title github">Criando um app....</span>
+                        <h3 class="title github">Criando um app....</h3>
                         <a href="https://www.google.com.br" target="
                         ">www.google.com.br</a>
                     </li>
                     <li>
-                        <span class="title github">Criando um app....</span>
+                        <h3 class="title github">Criando um app....</h3>
                         <a href="https://www.google.com.br" target="
                         ">www.google.com.br</a>
                     </li>
                     <li>
-                        <span class="title github">Criando um app....</span>
+                        <h3 class="title github">Criando um app....</h3>
                         <a href="https://www.google.com.br" target="
                         ">www.google.com.br</a>
+                    </li>
+                 </ul>
+             </div>
+         </section>
+
+         <section class="acordeon open">
+            <button class="trigger" type="button">
+             <h2>Experiência Profissional</h2>
+             </button>
+             <div class="content">
+                 <ul class="experience">
+                     <li>
+                        <span class="title">Developer | ITK</span>
+                        <span class="period">Jun 2016 - Current </span>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
                     </li>
                  </ul>
              </div>
