--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div class="information">
                 <p class="job" id="profile.job">Carregando...</p>
                 <p class="location" id="profile.location">Carregando...</p>
+                <p class="linkedin">
+                    <a href="https://www.linkedin.com/in/valdeir-jesus/" id="profile.linkedin">valdeir-jesus</a>
+                </p>
                 <p class="phone">
                     <a href="tel:(16) 9 9999-9999" id="profile.phone">Carregando...</a>
                 </p>
